--- a/index.html
+++ b/index.html
@@ -1364,7 +1364,7 @@
                             <div aria-hidden="true" class="absolute inset-0 z-20 flex flex-col items-center px-4 pb-3 text-white pt-7 sm:group-hover:rotate-y-180 sm:transition sm:duration-500">
                                 <span class="text-2xl z-20 font-medium transition duration-500 sm:opacity-0 group-hover:opacity-100">Exterior Painting &amp; stained</span>
                                 <p class="text-lg z-20 block mt-1.5 line-clamp-8 sm:line-clamp-7 font-medium leading-6 text-center transition duration-500 sm:opacity-0 group-hover:opacity-100" style="display: -webkit-box; -webkit-line-clamp: 5; -webkit-box-orient: vertical;">
-                                    Our Exterior Painting &amp; stained services will protect and enhance the beauty of your home by applying a coat of paint to its exterior. We use high-quality paints and materials that will last for years, ensuring that your home looks great for many seasons to come!
+                                    Our Exterior Painting &amp; staining services will protect and enhance the beauty of your home by applying a coat of paint to its exterior. We use high-quality paints and materials that will last for years, ensuring that your home looks great for many seasons to come!
                                 </p>
                             </div>
 
@@ -1374,7 +1374,7 @@
                                     <img
                                         class="object-cover grayscale"
                                         src="https://d3p2r6ofnvoe67.cloudfront.net/fit-in/filters:strip_exif()/filters:format(webp)/media/b3a06fba-a8a6-414b-883e-9a10878ae3e0.jpeg"
-                                        alt="Our Exterior Painting &amp; stained services will protect and enhance the beauty of your home by applying a coat of paint to its exterior. We use high-quality paints and materials that will last for years, ensuring that your home looks great for many seasons to come! for Kor Painting &amp; Pressure Washing in Greenville, SC"
+                                        alt="Our Exterior Painting &amp; staining services will protect and enhance the beauty of your home by applying a coat of paint to its exterior. We use high-quality paints and materials that will last for years, ensuring that your home looks great for many seasons to come! for Kor Painting &amp; Pressure Washing in Greenville, SC"
                                         loading="lazy"
                                         width="640" height="360"
                                     />
